# Imagination_in_translation

./: .gitignore  CONTRIBUTING.rst  Makefile  README.md  README.rst  add_similarity_scores.py  app.py  cloud_storage.py  condition_maps.yaml  config.py  drive_utils.py  new_app.py  pyproject.toml  requirements.txt  requirements_dev.txt  test.py  test_api.py  test_api_key.py  tox.ini  user_data.xlsx
analysis/: add_similarity_scores.py  aggregate.py  aggregate_conditions.py  aggregate_gpt.py  aggregate_gpt_desc_to_csv.py  computing_RDMS.py  data_preparation.ipynb  digit_span_analysis.ipynb  generate_images_by_prompt.py  gpt_gen-old.py  gpt_gen.py  gpt_image_desc_api.py  plotting.ipynb  similarity_analysis.ipynb  visualize_per_ppt.py  wilmas_labelme_gt_objects.py
data_analysis/: exploring_similarity_scores.ipynb
google_drive_load/: google_drive.py  load_api_from_env_test.py  log_file.csv  log_file_to_upload.txt  user_data.json  user_data.xlsx
logs/: log_processing.py  user_0e7872da59ec4b38a6a84dddda93a2c3.json  user_123.json  user_124.json  user_2aeffbe4eba14141bbf03a4a677700db.json  user_2e8e0aac16764685816998c27429c03c.json  user_30c111cf16e4485ab419ef6de33cdb90.json  user_39dc8de9abaf455cb5ab56f0b274b5a8.json  user_4439d425c5aa404a98f7c03b642b6919.json  user_4540fd726c6748c69efc7d87790a5a99.json  user_553d6ba83af1436cb2f4c8c96141f474.json  user_580e560dd9fc4d2e909bbc1282643af8.json  user_5fcf90ebbdac4b72a8dc5f66dd3b16e3.json  user_6dbed5e478c94e9b88f1c96d49138cf1.json  user_b1f73e897552413cb18488cd9a1adb79.json  user_b3ef1bded78c4fd2b51f999b3c73ed6b.json  (+5 more)
ui/: ui.py  (+4 more)
(+87 files in other folders)
