[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imagination_in_translation_local"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
  {name = "yaniv kopelman", email = "yanivk2@mail.tau.ac.il"}
]
maintainers = [
  {name = "yaniv kopelman", email = "yanivk2@mail.tau.ac.il"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/yaniv2024/imagination_in_translation_local/issues"
changelog = "https://github.com/yaniv2024/imagination_in_translation_local/blob/master/changelog.md"
homepage = "https://github.com/yaniv2024/imagination_in_translation_local"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

